# flatpak-rs

./: Cargo.toml  README.md
src/: index.rs  install.rs  instance.rs  main.rs  manifest.rs  mount_setattr.rs  ref.rs  sandbox.rs
src/sandbox/: argsfd.rs  dbus.rs  dirbuilder.rs  mod.rs  mount_setattr.rs  mounthandle.rs  util.rs  wayland.rs  withfds.rs
