[package]
name = "flatpak-rs"
version = "0.1.0"
edition = "2024"
authors = ["Allison Karlitskaya <allison.karlitskaya@redhat.com>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
composefs = "0.3.0"
composefs-oci = "0.3.0"
config = { version = "0.15.11", features = ["ini"] }
dirs = "6.0.0"
hex = "0.4.3"
http-cache-reqwest = "0.15.1"
oci-spec = "0.8.1"
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_json = "1.0.140"
tokio = "1.45.0"

[profile.dev.package.sha2]
# this is *really* slow otherwise
opt-level = 3
