[package]
name = "flatpak-rs"
version = "0.1.0"
edition = "2024"
authors = ["Allison Karlitskaya <allison.karlitskaya@redhat.com>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
composefs = "0.3.0"
composefs-oci = "0.3.0"
composefs-fuse = "0.3.0"
config = { version = "0.15.11", features = ["ini"] }
dirs = "6.0.0"
hex = "0.4.3"
http-cache-reqwest = "0.15.1"
log = "0.4.27"
oci-spec = "0.8.1"
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-middleware = "0.4.2"
rustix = { version = "1.0.7", features = ["mount", "process", "thread"] }
serde = { version = "1.0.219", features = ["alloc", "derive"] }
tokio = "1.45.0"
env_logger = "0.11.8"
whoami = { version = "1.6.0", default-features = false }
rust-ini = "0.21.1"
libc = "0.2.172"  # for mount_setattr.rs

[profile.dev.package.sha2]
# this is *really* slow otherwise
opt-level = 3


[patch.crates-io]
composefs = { git = "https://github.com/allisonkarlitskaya/composefs-rs", branch = "fuse" }
composefs-oci = { git = "https://github.com/allisonkarlitskaya/composefs-rs", branch = "fuse" }
composefs-fuse = { git = "https://github.com/allisonkarlitskaya/composefs-rs", branch = "fuse" }
